--- a/docs/include/google-code-prettify/prettify.css
+++ b/docs/include/google-code-prettify/prettify.css
@@ -32,7 +32,7 @@
 }
 
 /* Put a border around prettyprinted code snippets. */
-pre.prettyprint { padding: 2px; border: 0px solid #888; }
+pre.prettyprint { padding: 2px 1px 2px 2px; border: 0px solid #888; }
 
 /* Specify class=linenums on a pre to get line numbering */
 ol.linenums { margin-top: 0; margin-bottom: 0; } /* IE indents via margin-left */
